--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.30.1",
     "mysql2": "^3.5.2",
     "puppeteer": "^24.30.0",
     "sequelize": "^6.33.0"
